--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@emotion/styled": "^11.3.0",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
